[package]
name = "blitzcrank"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
